--- a/myfilmtv.html
+++ b/myfilmtv.html
@@ -19,6 +19,10 @@
     --muted-text: #666;
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 * {
     margin: 0;
     padding: 0;
@@ -30,21 +34,33 @@ body {
     background-color: var(--bg-cream);
     color: var(--text-dark);
     border-top: 20px solid var(--primary-red);
+    min-height: 100vh;
 }
 
 header {
     position: fixed;
     top: 0;
+    left: 0;
     width: 100%;
     background-color: var(--bg-cream);
-    padding: 1.5rem 5%;
+    padding: 1rem 5%;
     border-bottom: 2px solid var(--border-line);
     z-index: 999;
+    box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+}
+
+.header-container {
+    display: flex;
+    align-items: center;
+    gap: 2.5rem;
+}
+
+header img {
+    width: 55px;
 }
 
 nav {
     display: flex;
-    justify-content: center;
     gap: 4rem;
 }
 
@@ -53,15 +69,23 @@ nav a {
     font-family: 'Playfair Display', serif;
     font-size: 1.2rem;
     color: var(--text-dark);
+    transition: 0.3s ease;
 }
 
 nav a:hover {
     color: var(--primary-red);
 }
 
+main {
+    padding-top: 100px;
+}
+
 .section {
-    padding: 10rem 8% 5rem;
-    max-width: 1200px;
+    padding: 6rem 10%;
+}
+
+.section-content {
+    max-width: 1100px;
     margin: auto;
 }
 
@@ -143,18 +167,6 @@ nav a:hover {
     text-align: justify;
 }
 
-.back-to-top {
-    display: inline-block;
-    margin-top: 0.5rem;
-    font-size: 0.85rem;
-    text-decoration: underline;
-    color: var(--primary-red);
-}
-
-.back-to-top:hover {
-    color: #000;
-}
-
 .trailer-container {
     border: 2px solid var(--border-line);
     border-radius: 20px;
@@ -176,11 +188,27 @@ nav a:hover {
     margin: 3rem auto 2rem;
 }
 
+.back-to-top {
+    display: inline-block;
+    margin-top: 2rem;
+    font-family: 'Playfair Display', serif;
+    font-size: 0.95rem;
+    text-decoration: none;
+    color: var(--text-dark);
+    border-bottom: 1px solid var(--text-dark);
+    transition: 0.3s ease;
+}
+
+.back-to-top:hover {
+    color: var(--primary-red);
+    border-color: var(--primary-red);
+}
+
 footer {
     background-color: #DCDCD5;
     padding: 2rem 0;
     text-align: center;
-    margin-top: 5rem;
+    margin-top: 4rem;
 }
 
 .social-links {
@@ -193,6 +221,7 @@ footer {
 .social-links a {
     color: var(--text-dark);
     font-size: 1.4rem;
+    transition: 0.3s ease;
 }
 
 .social-links a:hover {
@@ -202,130 +231,118 @@ footer {
 footer p {
     font-size: 0.9rem;
 }
-
-@media(max-width: 900px) {
-    .split-container, .split-container.reverse {
-        grid-template-columns: 1fr;
-        text-align: center;
-    }
-
-    .trailer-container {
-        height: 250px;
-    }
-
-    .desc-card {
-        margin-bottom: 2rem;
-    }
-}
 </style>
 </head>
 
 <body>
+    <header>
+        <div class="header-container">
+            <a href="images/blacklogo.png" target="_blank">
+                <img src="images/blacklogo.png" alt="mylogo">
+            </a>
+            <nav>
+                <a href="index.html">Home</a>
+                <a href="mybeats.html">Beats</a>
+                <a href="myfilm.html">Movies</a>
+                <a href="myfilmtv.html">TV Shows</a>
+            </nav>
+        </div>
+    </header>
 
-<header>
-    <nav>
-        <a href="index.html">Home</a>
-        <a href="gallery.html">Gallery</a>
-        <a href="mybeats.html">Beats</a>
-        <a href="myfilm.html">Movies</a>
-        <a href="myfilmtv.html">TV Shows</a>
-    </nav>
-</header>
+    <main>
+        <section class="section">
+            <div class="section-content">
+                <h1 class="page-title">My Film TV Shows</h1>
+                <p class="subtitle">My favorite series</p>
 
-<section class="section">
-    <h1 class="page-title">My Film TV Shows</h1>
-    <p class="subtitle">My favorite series</p>
+                <div class="split-container">
+                    <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/Modern_Family';">
+                        <h2>Modern Family</h2>
+                        <div class="category">Sitcom / Comedy</div>
+                        <p>A mockumentary-style sitcom following three related families and their everyday lives. I love coming back to this series whenever I need a good laugh, it feels like a cozy, funny hug for my evenings.</p>
+                        <p class="creator">Created by Christopher Lloyd & Steven Levitan</p>
+                    </div>
+                    <div class="trailer-container">
+                        <iframe src="https://www.youtube.com/embed/rbpTUPisA78" allowfullscreen></iframe>
+                    </div>
+                </div>
 
-    <div class="split-container">
-        <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/Modern_Family';">
-            <h2>Modern Family</h2>
-            <div class="category">Sitcom / Comedy</div>
-            <p>A mockumentary-style sitcom following three related families and their everyday lives. I love coming back to this series whenever I need a good laugh, it feels like a cozy, funny hug for my evenings.</p>
-            <p class="creator">Created by Christopher Lloyd & Steven Levitan</p>
-            <a href="#top" class="back-to-top">Back to Top</a>
-        </div>
-        <div class="trailer-container">
-            <iframe src="https://www.youtube.com/embed/rbpTUPisA78" allowfullscreen></iframe>
-        </div>
-    </div>
+                <div class="split-container reverse">
+                    <div class="trailer-container">
+                        <iframe src="https://www.youtube.com/embed/oZn3qSgmLqI" allowfullscreen></iframe>
+                    </div>
+                    <div class="desc-card" onclick="window.location.href='#';">
+                        <h2>The Queen's Gambit</h2>
+                        <div class="category">Drama / Miniseries</div>
+                        <p>A miniseries about a young chess prodigy rising through the ranks. This show always inspires me when I feel stuck, Beth's journey is thrilling and smart, she inspired me to play chess.</p>
+                        <p class="creator">Created by Scott Frank</p>
+                    </div>
+                </div>
 
-    <div class="split-container reverse">
-        <div class="trailer-container">
-            <iframe src="https://www.youtube.com/embed/oZn3qSgmLqI" allowfullscreen></iframe>
-        </div>
-        <div class="desc-card" onclick="window.location.href='#';">
-            <h2>The Queen's Gambit</h2>
-            <div class="category">Drama / Miniseries</div>
-            <p>A miniseries about a young chess prodigy rising through the ranks. This show always inspires me when I feel stuck, Beth’s journey is thrilling and smart, she inspired me to play chess.</p>
-            <p class="creator">Created by Scott Frank</p>
-            <a href="#top" class="back-to-top">Back to Top</a>
-        </div>
-    </div>
+                <div class="split-container">
+                    <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/Kim%27s_Convenience';">
+                        <h2>Kim's Convenience</h2>
+                        <div class="category">Sitcom / Comedy</div>
+                        <p>A sitcom about a Korean-Canadian family running a convenience store. Watching this series feels like visiting a warm, funny family I wish I had nearby, it is perfectly cozy and heartwarming.</p>
+                        <p class="creator">Created by Ins Choi & Kevin White</p>
+                    </div>
+                    <div class="trailer-container">
+                        <iframe src="https://www.youtube.com/embed/HIBbB6giJ7c" allowfullscreen></iframe>
+                    </div>
+                </div>
 
-    <div class="split-container">
-        <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/Kim%27s_Convenience';">
-            <h2>Kim's Convenience</h2>
-            <div class="category">Sitcom / Comedy</div>
-            <p>A sitcom about a Korean-Canadian family running a convenience store. Watching this series feels like visiting a warm, funny family I wish I had nearby, it is perfectly cozy and heartwarming.</p>
-            <p class="creator">Created by Ins Choi & Kevin White</p>
-            <a href="#top" class="back-to-top">Back to Top</a>
-        </div>
-        <div class="trailer-container">
-            <iframe src="https://www.youtube.com/embed/HIBbB6giJ7c" allowfullscreen></iframe>
-        </div>
-    </div>
+                <div class="split-container reverse">
+                    <div class="trailer-container">
+                        <iframe src="https://www.youtube.com/embed/8yyzNQfaQR8" allowfullscreen></iframe>
+                    </div>
+                    <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/3%25';">
+                        <h2>3%</h2>
+                        <div class="category">Sci-Fi / Thriller</div>
+                        <p>A dystopian sci-fi series where candidates compete for a chance at a better life. This series is perfect for those who seek thrill and mystery, this serie helped me through the pandemic.</p>
+                        <p class="creator">Created by Pedro Aguilera</p>
+                    </div>
+                </div>
 
-    <div class="split-container reverse">
-        <div class="trailer-container">
-            <iframe src="https://www.youtube.com/embed/8yyzNQfaQR8" allowfullscreen></iframe>
-        </div>
-        <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/3%25';">
-            <h2>3%</h2>
-            <div class="category">Sci-Fi / Thriller</div>
-            <p>A dystopian sci-fi series where candidates compete for a chance at a better life. This series is perfect for those who seek thrill and mystery, this serie helped me through the pandemic.</p>
-            <p class="creator">Created by Pedro Aguilera</p>
-            <a href="#top" class="back-to-top">Back to Top</a>
-        </div>
-    </div>
+                <div class="split-container">
+                    <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/The_100_(TV_series)';">
+                        <h2>The 100</h2>
+                        <div class="category">Sci-Fi / Drama</div>
+                        <p>A post-apocalyptic sci-fi series following 100 juvenile delinquents sent back to Earth. Though the serie is so long, it never gets boring, it gets interesting every episode.</p>
+                        <p class="creator">Created by Jason Rothenberg</p>
+                    </div>
+                    <div class="trailer-container">
+                        <iframe src="https://www.youtube.com/embed/aDrsItJ_HU4" allowfullscreen></iframe>
+                    </div>
+                </div>
 
-    <div class="split-container">
-        <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/The_100_(TV_series)';">
-            <h2>The 100</h2>
-            <div class="category">Sci-Fi / Drama</div>
-            <p>A post-apocalyptic sci-fi series following 100 juvenile delinquents sent back to Earth. Though the serie is so long, it never gets boring, it gets interesting every episode.</p>
-            <p class="creator">Created by Jason Rothenberg</p>
-            <a href="#top" class="back-to-top">Back to Top</a>
-        </div>
-        <div class="trailer-container">
-            <iframe src="https://www.youtube.com/embed/aDrsItJ_HU4" allowfullscreen></iframe>
-        </div>
-    </div>
+                <div class="split-container reverse">
+                    <div class="trailer-container">
+                        <iframe src="https://www.youtube.com/embed/BwYBw1raC2o" allowfullscreen></iframe>
+                    </div>
+                    <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/Dead_to_Me_(TV_series)';">
+                        <h2>Dead to Me</h2>
+                        <div class="category">Comedy / Drama</div>
+                        <p>Darkly comedic tale of grief, friendship, and secrets. This serie is both funny and twisted, it almost reminds me of the movie Gone Girl.</p>
+                        <p class="creator">Created by Liz Feldman</p>
+                    </div>
+                </div>
 
-    <div class="split-container reverse">
-        <div class="trailer-container">
-            <iframe src="https://www.youtube.com/embed/BwYBw1raC2o" allowfullscreen></iframe>
-        </div>
-        <div class="desc-card" onclick="window.location.href='https://en.wikipedia.org/wiki/Dead_to_Me_(TV_series)';">
-            <h2>Dead to Me</h2>
-            <div class="category">Comedy / Drama</div>
-            <p>Darkly comedic tale of grief, friendship, and secrets. This serie is both funny and twisted, it almost reminds me of the movie Gone Girl.</p>
-            <p class="creator">Created by Liz Feldman</p>
-            <a href="#top" class="back-to-top">Back to Top</a>
-        </div>
-    </div>
-</section>
+                <a href="#top" class="back-to-top">Back to Top</a>
 
-<div class="divider"></div>
+                <div class="divider"></div>
+            </div>
+        </section>
+    </main>
 
-<footer>
-    <div class="social-links">
-        <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
-        <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
-        <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
-        <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
-    </div>
-    <p>&copy; Cyril Libuton</p>
-</footer>
+    <footer>
+        <div class="social-links">
+            <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+        </div>
+        <p>&copy; Cyril Libuton</p>
+    </footer>
 
 </body>
 </html>
