--- a/collage.html
+++ b/collage.html
@@ -43,15 +43,24 @@
             left: 0;
             width: 100%;
             background-color: var(--bg-cream);
-            padding: 1.5rem 5%;
+            padding: 1rem 5%;
             z-index: 999;
             border-bottom: 2px solid var(--border-line);
             box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
         }
 
+        .header-container {
+            display: flex;
+            align-items: center;
+            gap: 2.5rem;
+        }
+
+        header img {
+            width: 55px;
+        }
+
         nav {
             display: flex;
-            justify-content: center;
             gap: 4rem;
         }
 
@@ -68,7 +77,7 @@
         }
 
         main {
-            padding-top: 140px;
+            padding-top: 100px;
             padding-bottom: 4rem;
         }
 
@@ -147,15 +156,18 @@
 </head>
 
 <body>
-
     <header>
-        <nav>
-            <a href="index.html#top">Home</a>
-            <a href="gallery.html">Gallery</a>
-            <a href="aboutme.html">Biography</a>
-            <a href="index.html#projects">Projects</a>
-            <a href="index.html#contacts">Contacts</a>
-        </nav>
+        <div class="header-container">
+            <a href="images/blacklogo.png" target="_blank">
+                <img src="images/blacklogo.png" alt="mylogo">
+            </a>
+            <nav>
+                <a href="index.html#top">Home</a>
+                <a href="aboutme.html">Biography</a>
+                <a href="collage.html">Dream Places</a>
+                <a href="bucket.html">Bucket Lists</a>
+            </nav>
+        </div>
     </header>
 
     <main>
