--- a/myfilmtv.html
+++ b/myfilmtv.html
@@ -182,10 +182,11 @@ main {
 }
 
 .divider {
-    width: 80%;
-    height: 2px;
-    background-color: var(--border-line);
-    margin: 3rem auto 2rem;
+    width: 100%;
+    height: 3px;
+    background-color: black;
+    margin: 2rem auto;
+    border-radius: 2px;
 }
 
 .back-to-top {
