--- a/blog2.html
+++ b/blog2.html
@@ -204,9 +204,9 @@
             </a>
             <nav>
                 <a href="index.html#top">Home</a>
-                <a href="gallery.html">Blog 1</a>
-                <a href="aboutme.html">Blog 2</a>
-                <a href="index.html#projects">Blog 3</a>
+                <a href="blog1.html">Blog 1</a>
+                <a href="blog2.hmtl">Blog 2</a>
+                <a href="blog3.html">Blog 3</a>
             </nav>
         </div>
     </header>
@@ -259,3 +259,4 @@
     </footer>
 </body>
 </html>
+
