--- a/blog1.html
+++ b/blog1.html
@@ -1,118 +1,229 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" id="top">
 <head>
-  <meta charset="UTF-8">
-  <title>Congrats! we've invented a problem that thinks</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Congrats! we've invented a problem that thinks</title>
 
-  <style>
-    body {
-      background-color: #f2f2f2; 
-      margin: 1;
-      font-family: Tahoma, sans-serif;
-    }
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Lato:wght@300;400;700&family=Playfair+Display:wght@400;600&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
 
-    .page {
-      max-width: 720px;
-      margin: 40px auto;
-      padding: 30px 35px;
-      background-color: #ffffff;
-      border-radius: 6px;
-      box-shadow: 0 2px 8px rgba(0,0,0,0.05);
-    }
+    <style>
+        :root {
+            --bg-cream: #FDFCF5;
+            --primary-red: #9E4244;
+            --text-dark: #2c2c2c;
+            --border-line: #000;
+            --muted-text: #666;
+        }
 
-    .title {
-      font-family: Georgia, serif;
-      font-size: 30px;
-      font-weight: bold;
-      text-align: center;
-      margin-top: 40px;
-      margin-bottom: 6px;
-      line-height: 1.3;
-      color: #740A03;
-    }
+        html {
+            scroll-behavior: smooth;
+        }
 
-    /* author name */
-    .name {
-      font-family: Georgia, serif;
-      font-size: 14px;
-      font-weight: normal;
-      text-align: center;
-      margin-top: 0;
-      margin-bottom: 14px;
-      color: #740A03;
-    }
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
 
-    .divider {
-      width: 40%;
-      margin: 20px auto 30px;
-      border: none;
-      border-top: 2px solid #000;
-      color: #740A03;
-    }
+        body {
+            font-family: 'Lato', sans-serif;
+            background-color: var(--bg-cream);
+            color: var(--text-dark);
+            border-top: 20px solid var(--primary-red);
+            min-height: 100vh;
+        }
 
-    .bio {
-      font-size: 16px;
-      line-height: 1.7;
-      text-align: justify;
-      text-indent: 40px;
-      margin-bottom: 20px;
-    }
+        header {
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            background-color: var(--bg-cream);
+            padding: 1rem 5%;
+            z-index: 999;
+            border-bottom: 2px solid var(--border-line);
+            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.05);
+        }
 
-    .section-title {
-      font-family: Georgia, serif;
-      font-size: 18px;
-      font-weight: bold;
-      margin-top: 30px;
-      margin-bottom: 10px;
-      color: #740A03;
-	}
+        .header-container {
+            display: flex;
+            align-items: center;
+            gap: 2.5rem;
+        }
 
-    .home-btn {
-      display: inline-block;
-      text-decoration: none;
-      background: #740A03;
-      color: white;
-      font-family: Arial, Helvetica, sans-serif;
-      font-size: 14px;
-      letter-spacing: 1px;
-      padding: 10px 18px;
-      border-radius: 6px;
-      margin-bottom: 25px;
-      font-weight: 600;
-    }
-  </style>
+        header img {
+            width: 55px;
+        }
+
+        nav {
+            display: flex;
+            gap: 4rem;
+        }
+
+        nav a {
+            text-decoration: none;
+            font-family: 'Playfair Display', serif;
+            font-size: 1.2rem;
+            color: var(--text-dark);
+            transition: 0.3s ease;
+        }
+
+        nav a:hover {
+            color: var(--primary-red);
+        }
+
+        main {
+            padding-top: 100px;
+            padding: 4rem 10%;
+        }
+
+        .page {
+            max-width: 900px;
+            margin: 0 auto;
+            padding: 70px 80px;
+            background-color: white;
+            box-shadow: 0 20px 40px rgba(0,0,0,0.1);
+            border-radius: 8px;
+        }
+
+        .title {
+            font-family: 'Playfair Display', serif;
+            font-size: 2.8rem;
+            font-weight: 400;
+            text-align: center;
+            margin-bottom: 16px;
+            line-height: 1.25;
+            color: var(--primary-red);
+        }
+
+        .name {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.1rem;
+            font-weight: 400;
+            text-align: center;
+            margin-bottom: 24px;
+            color: var(--text-dark);
+        }
+
+        .divider {
+            width: 100%;
+            margin: 20px auto 30px;
+            border: none;
+            border-top: 2px solid var(--border-line);
+        }
+
+        .bio {
+            font-family: 'Lato', sans-serif;
+            font-size: 1.1rem;
+            line-height: 1.7;
+            text-align: justify;
+            text-indent: 40px;
+            margin-bottom: 20px;
+        }
+
+        .section-title {
+            font-family: 'Playfair Display', serif;
+            font-size: 1.4rem;
+            font-weight: 600;
+            margin-top: 30px;
+            margin-bottom: 10px;
+            color: var(--primary-red);
+        }
+
+        .back-to-top {
+            display: inline-block;
+            margin-top: 2rem;
+            font-family: 'Playfair Display', serif;
+            font-size: 0.95rem;
+            text-decoration: none;
+            color: var(--text-dark);
+            border-bottom: 1px solid var(--text-dark);
+            transition: 0.3s ease;
+        }
+
+        .back-to-top:hover {
+            color: var(--primary-red);
+            border-color: var(--primary-red);
+        }
+
+        footer {
+            background-color: #DCDCD5;
+            padding: 2rem 0;
+            text-align: center;
+            margin-top: 4rem;
+        }
+
+        .social-links {
+            display: flex;
+            justify-content: center;
+            gap: 1.5rem;
+            margin-bottom: 1rem;
+        }
+
+        .social-links a {
+            color: var(--text-dark);
+            font-size: 1.4rem;
+            transition: 0.3s ease;
+        }
+
+        .social-links a:hover {
+            color: var(--primary-red);
+        }
+    </style>
 </head>
+
 <body>
+    <header>
+        <div class="header-container">
+            <a href="images/blacklogo.png" target="_blank">
+                <img src="images/blacklogo.png" alt="mylogo">
+            </a>
+            <nav>
+                <a href="index.html#top">Home</a>
+                <a href="blog1.html">Blog 1</a>
+                <a href="blog2.hmtl">Blog 2</a>
+                <a href="blog3.html">Blog 3</a>
+            </nav>
+        </div>
+    </header>
 
-  <h1 class="title">Congrats! we've invented a problem that thinks</h1>
-  <h2 class="name">By: Libuton, Cyril Mae S.</h2>
-  <hr class="divider">
+    <main>
+        <div class="page">
+            <h1 class="title">Congrats! we've invented a problem that thinks</h1>
+            <h2 class="name">By: Libuton, Cyril Mae S.</h2>
+            <hr class="divider">
 
-  <div class="page">
+            <h3 class="section-title">When Machines Start Thinking Like Us</h3>
+            <p class="bio">
+                Artificial intelligence is changing the way we study, work, and even think. It can write essays, generate art, solve complex problems, and respond faster than most humans ever could. It's efficient, impressive, and sometimes a little unsettling. And yes, an AI produced that. That's kind of the point. When machines start sounding, thinking, and behaving like humans. How much control are we truly willing to give up?
+            </p>
 
-    <h3 class="section-title">When Machines Start Thinking Like Us</h3>
-    <p class="bio">
-      Artificial intelligence is changing the way we study, work, and even think. It can write essays, generate art, solve complex problems, and respond faster than most humans ever could. It’s efficient, impressive, and sometimes a little unsettling. And yes, an AI produced that. That’s kind of the point.When machines start sounding, thinking, and behaving like humans. How much control are we truly willing to give up?
-	</p>
+            <h3 class="section-title">The Problem</h3>
+            <p class="bio">
+                AI technology has evolved from a simple grammar corrector to a virtual human-like chatbot and even a simulation of a human. It wasn't much of a problem back then since it was only used when absolutely necessary, but when it isn't, it becomes a problem. The abusive and unnecessary use of AI is what will lead to a catastrophe. I am not saying people should stop using AI for good, but instead we should be more cautious. The extensive use of AI is harming society. From my own experience, I've noticed how AI is often used to create silly or meaningless videos online. At first, these videos were funny and harmless; however, the more people discovered how easy it was to generate them, the more they were used inappropriately and carelessly. What many users fail to realize is that AI consumes real resources, such as water and energy, just to function. Using AI for unnecessary content may seem insignificant, but when done repeatedly by millions of people, the impact becomes much more serious.
+            </p>
 
-    <h3 class="section-title">The Problem</h3>
-    <p class="bio">
-      AI technology has evolved from a simple grammar corrector to a virtual human-like chatbot and even a simulation of a human. It wasn't much of a problem back then since it was only used when absolutely necessary, but when it isn't, it becomes a problem. The abusive and unnecessary use of AI is what will lead to a catastrophe. I am not saying people should stop using AI for good, but instead we should be more cautious. The extensive use of AI is harming society. From my own experience, I’ve noticed how AI is often used to create silly or meaningless videos online. At first, these videos were funny and harmless; however, the more people discovered how easy it was to generate them, the more they were used inappropriately and carelessly. What many users fail to realize is that AI consumes real resources, such as water and energy, just to function. Using AI for unnecessary content may seem insignificant, but when done repeatedly by millions of people, the impact becomes much more serious.
-    </p>
+            <h3 class="section-title">AI as a Tool, Not a Toy</h3>
+            <p class="bio">
+                AI should be treated as a tool rather than a form of entertainment used without limits. While AI can be helpful and innovative, extensive use of AI is harming society. From my own experience, I've noticed how AI is often used to create silly or meaningless videos online. What many users fail to realize is that AI consumes real resources, such as water and energy, just to function. Using AI for unnecessary content may seem insignificant, but when done repeatedly by millions of people, the impact becomes much more serious. Be wise and use AI responsibly.
+            </p>
+            
+            <a href="#top" class="back-to-top">Back to Top</a>
+        </div>
+    </main>
 
-    <h3 class="section-title">AI as a Tool, Not a Toy</h3>
-    <p class="bio">
-      AI should be treated as a tool rather than a form of entertainment used without limits. While AI can be helpful and innovative, extensive use of AI is harming society. From my own experience, I’ve noticed how AI is often used to create silly or meaningless videos online. What many users fail to realize is that AI consumes real resources, such as water and energy, just to function. Using AI for unnecessary content may seem insignificant, but when done repeatedly by millions of people, the impact becomes much more serious. Be wise and use AI responsibly.
-    </p>
-	  
-	<a href="index.html" class="home-btn">HOME</a>
-  </div>
-
+    <footer>
+        <div class="social-links">
+            <a href="https://web.facebook.com/cycy.1123"><i class="fa-brands fa-facebook-f"></i></a>
+            <a href="https://github.com/libutoncyrilmae-a11y"><i class="fa-brands fa-github"></i></a>
+            <a href="https://www.instagram.com/cy.cyreal/"><i class="fa-brands fa-instagram"></i></a>
+            <a href="mailto:123cyrilmae@gmail.com"><i class="fa-regular fa-envelope"></i></a>
+        </div>
+        <p>&copy; Cyril Libuton</p>
+    </footer>
 </body>
 </html>
-
-
-
-
-
-
