--- a/blog2.html
+++ b/blog2.html
@@ -205,7 +205,7 @@
             <nav>
                 <a href="index.html#top">Home</a>
                 <a href="blog1.html">Blog 1</a>
-                <a href="blog2.hmtl">Blog 2</a>
+                <a href="blog2.html">Blog 2</a>
                 <a href="blog3.html">Blog 3</a>
             </nav>
         </div>
@@ -259,4 +259,5 @@
     </footer>
 </body>
 </html>
+
 
