--- a/blog1.html
+++ b/blog1.html
@@ -185,7 +185,7 @@
             <nav>
                 <a href="index.html#top">Home</a>
                 <a href="blog1.html">Blog 1</a>
-                <a href="blog2.hmtl">Blog 2</a>
+                <a href="blog2.html">Blog 2</a>
                 <a href="blog3.html">Blog 3</a>
             </nav>
         </div>
@@ -227,3 +227,4 @@
     </footer>
 </body>
 </html>
+
